@@ -1,3 +1,9 @@
+Mon Oct  4 19:55:33 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * bin/make_release.py:
+
+          Updates. 
+
 Mon Oct  4 12:32:02 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/LSOCK_Stream.h:
